# invoice-system

./: .env.example  .gitignore  CONTRIBUTING.md  README.en.md  README.md  docker-compose.yml  requirements.txt
invoice-toolkit/: Dockerfile.backend  README.md  docker-entrypoint.sh  dockerignore.backend  pyproject.toml  requirements.txt
invoice-toolkit/invoice_toolkit/: __init__.py  agent.py  agent_orchestrator.py  browser_agent.py  browser_auth.py  checker.py  classifier.py  cli.py  config.py  database.py  file_utils.py  llm_client.py  matcher.py  mcp_server.py  ocr.py  prompt_loader.py  rag.py  rule_parser.py  tools.py
invoice-toolkit/invoice_toolkit/model_browser/: __init__.py  action_executor.py  console.py  dom_formatter.py  js_scripts.py  llm_bridge.py  models.py
invoice-toolkit/memory/: MEMORY.md
invoice-toolkit/memory/meta/: changelog.md  confidence.json
invoice-toolkit/memory/semantic/: field-patterns.md  rules.md  ui-map.md
invoice-toolkit/model/: 加班餐情况说明模版.docx  山东大学经费报销管理办法.docx
invoice-toolkit/readme/: README (3).md  README.md  memory-system-design.md
invoice-toolkit/skills/attachment-checker/: SKILL.md
invoice-toolkit/skills/attachment-checker/references/: process-management.md  rules.md  tools.md
invoice-toolkit/skills/attachment-checker/scripts/: tools.py
invoice-toolkit/skills/attachment-checker/templates/prompts/: check_category.md  filename_check.md  meal_desc.md  source_match.md
invoice-toolkit/skills/reimbursement-prompt/: SKILL.md
invoice-toolkit/skills/reimbursement-prompt/references/: browser-agent-guide.md  template-syntax.md
invoice-toolkit/skills/reimbursement-prompt/scripts/: __init__.py  calculate_amounts.py  memory_store.py  memory_writer.py  seed_converter.py
invoice-toolkit/skills/reimbursement-prompt/templates/: default.md
my-react-app/: Dockerfile.frontend  INTEGRATION.md  dockerignore.frontend  nginx.conf  package-lock.json  package.json
my-react-app/src/: App.jsx  index.css  main.jsx  发票报销管理系统-前端模块化文档.md
my-react-app/src/components/: Dashboard.jsx  FileManager.jsx  InvoiceApp.jsx  LoginPage.jsx  MembersPanel.jsx  ReimbursementAgent.jsx  (+4 more)
(+15 files in other folders)
